# fubar

./: Cargo.toml  README.md
.github/workflows/: security.yml
src/: bins.rs  code.rs  main.rs  tags.rs  utils.rs
src/bins/: ab.rs  agetty.rs  alpine.rs  ansible_playbook.rs  aoss.rs  apt.rs  apt_get.rs  ar.rs  aria2c.rs  arj.rs  arp.rs  as_.rs  ascii85.rs  ascii_xfr.rs  ash.rs  aspell.rs  at.rs  atobm.rs  awk.rs  aws.rs  base32.rs  base58.rs  base64.rs  basenc.rs  basez.rs  bash.rs  batcat.rs  bc.rs  bconsole.rs  binname.sh  bpftrace.rs  bridge.rs  bundle.rs  bundler.rs  busctl.rs  busybox.rs  byebug.rs  bzip2.rs  c89.rs  c99.rs  (+327 more)
