[package]
name = "fubar-cli"
version = "0.1.3"
edition = "2021"
authors = ["irishmaestro"]
repository = "https://github.com/irishmaestro/fubar"
description = "Formidable Unix Binary Arsenal & Repository"
license = "GPL-3.0"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fubar"
path = "src/main.rs"


[dependencies]
arboard = "3.2.0"
crossterm = "0.26.1"
lazy_static = "1.4.0"
ratatui = "0.24.0"
# tui-textarea = "0.2.0" # may use this for customizing payloads
